--- a/Blogpost.html
+++ b/Blogpost.html
@@ -4,7 +4,14 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <h1>Aqui vamos a hacer un blog</h1>
-    <h2>Y este es el parrafo de inicio</h2>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <h2>
+          Y este es el prarrafi de inicio donde vamos a explicar las cosas
+          increibles que se pueden hacer con ramas
+        </h2>
+      </div>
+    </div>
   </body>
 </html>
