--- a/Blogpost.html
+++ b/Blogpost.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">cabecera</div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <h2>
