--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,10 +7,15 @@
     <div id="container">
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
-        <h2>
+        <p>
           Y este es el prarrafi de inicio donde vamos a explicar las cosas
           increibles que se pueden hacer con ramas
-        </h2>
+        </p>
+        <p>
+          Los blogs son la mejor forma de compartir informacion y tus ideas.
+          mucho mas que ir a conferencias o salir en youtube. Excepto si eres un
+          rockstar. Pero estadisticamente no lo esres... por ahora.
+        </p>
       </div>
     </div>
   </body>
