--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de confianza</span>
+        Hyperblog <span id="tagline">Tu blog Maestro</span>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -19,6 +19,7 @@
           mucho mas que ir a conferencias o salir en youtube. Excepto si eres un
           rockstar. Pero estadisticamente no lo esres... por ahora.
         </p>
+        <p>suscribete y dale like</p>
       </div>
     </div>
   </body>
