--- a/Blogpost.html
+++ b/Blogpost.html
@@ -15,6 +15,7 @@
           Y este es el parrafo de inicio donde vamos a explicar las cosas
           increibles que se pueden hacer con ramas
         </p>
+        <p><img src="imagenes/grupo.png" width="100%" /></p>
         <p>
           Los blogs son la mejor forma de compartir informacion y tus ideas.
           mucho mas que ir a conferencias o salir en youtube. Excepto si eres un
